[package]
name = "cargo-heu"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cargo-heu"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1"
regex = "1"
arboard = "3"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
num_cpus = "1"
shlex = "1"
